--- a/package.json
+++ b/package.json
@@ -9,37 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.12.1",
-    "@types/react-leaflet": "^2.8.2",
-    "@vercel/analytics": "^0.1.3",
+    "@vercel/analytics": "^1.0.1",
     "aos": "^2.3.4",
-    "battery": "^1.0.1",
     "cookie-cutter": "^0.2.0",
-    "detect-browser": "^5.3.0",
-    "detect-gpu": "^4.0.36",
-    "framer-motion": "^4.1.17",
-    "leaflet": "^1.8.0",
-    "next": "12.2.2",
+    "framer-motion": "^10.12.16",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.0.1",
-    "react-scroll": "^1.8.8",
-    "react-timer-hook": "^3.0.5",
-    "serve": "^14.0.1",
-    "systeminformation": "^5.12.5",
+    "react-scroll": "^1.8.9",
+    "react-timer-hook": "^3.0.6",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.11",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "autoprefixer": "10.4.5",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
-    "postcss": "^8.4.14",
-    "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.1.6",
+    "postcss": "^8.4.24",
+    "tailwind-scrollbar": "^3.0.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.7.4"
   }
 }
