--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "i18nexus pull && next dev",
+    "build": "i18nexus pull && next build",
+    "start": "i18nexus pull && next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "cookie-cutter": "^0.2.0",
     "framer-motion": "^10.12.16",
     "next": "^13.4.4",
+    "next-i18next": "^15.4.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
     "autoprefixer": "10.4.5",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.2",
+    "i18nexus-cli": "^3.5.0",
     "postcss": "^8.4.24",
     "tailwind-scrollbar": "^3.0.4",
     "tailwindcss": "^3.3.2",
